content/boundary/v0.13.x/content/docs/commands/credentials/list.mdx
---
layout: docs
page_title: credentials list - Command
description: |-
  The "credentials list" command lists credentials within an enclosing scope or resource.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# credentials list

Command: `boundary credentials list`

The `credentials list` command lists credentials within an enclosing scope or resource.

## Examples

The following example lists all credentials for a credential store with the ID `csst_5GGWwRngd7`:

```shell-session
$ credentials list -credential-store-id csst_5GGWwRngd7
```

**Example output:**

<CodeBlockConfig hideClipboard>

```plaintext
Credential information:
  ID:                    credup_29IUJANN59
    Version:             1
    Type:                username_password
    Name:                tester
    Authorized Actions:
      no-op
      read
      update
      delete

  ID:                    credup_6zHHwQWvUS
    Version:             1
    Type:                username_password
    Name:                support-eng
    Authorized Actions:
      no-op
      read
      update
      delete

  ID:                    credup_J15mtU4qmy
    Version:             1
    Type:                username_password
    Name:                ssh-user
    Authorized Actions:
      no-op
      read
      update
      delete
```

</CodeBlockConfig>

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary credentials list [options] [args]
```

</CodeBlockConfig>


### Command options

- `-credential-store-id` `(string: "")` - The credential store resource that contains the credentials you want to list.
You can also specify the credential store using the **BOUNDARY_CREDENTIAL_STORE_ID** environment variable.
- `-filter` `(string: "")` - If set, Boundary filters the list operation before the results are returned.
The filter operates against each item in the list.
We recommend that you use single quotes, because the filters contain double quotes.
Refer to the [Filter resource listings documentation](/boundary/docs/concepts/filtering/resource-listing) for more details.

@include 'cmd-option-note.mdx'